# gst-chatbot

./: LICENSE  README.md  pyproject.toml
src/gst_chatbot/: scraper.py
