[tool.poetry]
name = "gst-chatbot"
version = "0.1.0"
description = ""
authors = ["theodorusblote <theodorusblote@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.4"
bs4 = "^0.0.2"
notebook = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
